fix issues on smaller screens

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,19 +1,5 @@
 .container {
-    padding-top:60px
-}
-
-nav {
-    position:fixed;
-    width:200px
-}
-
-nav ul {
-    float:left
-}
-
-nav ul li {
-    display:block;
-    margin-bottom:10px
+    padding-top:40px
 }
 
 .sharebuttons {
@@ -40,4 +26,56 @@ nav ul li {
 .sharebuttons ul li svg {
   width: 40px;
   height: 40px;
+}
+
+
+nav {
+    margin-top:40px;
+    font-size: 1.2em;
+}
+
+nav ul {
+    float:left
+}
+
+nav ul li {
+    display:block;
+    margin-bottom:10px
+}
+
+/* The side navigation menu */
+.sidebar {
+  margin: 0;
+  padding: 0;
+  width: 200px;
+  position: fixed;
+  height: 100%;
+  overflow: auto;
+  display: block;
+}
+
+/* Page content. The value of the margin-left property should match the value of the sidebar's width property */
+div.content {
+  margin-left: 200px;
+  padding: 1px 16px;
+  height: 1000px;
+}
+
+/* On screens that are less than 700px wide, make the sidebar into a topbar */
+@media screen and (max-width: 700px) {
+  .sidebar {
+    width: 100%;
+    height: auto;
+    position: relative;
+    float: left;
+  }
+  div.content {margin-left: 0;}
+}
+
+/* On screens that are less than 400px, display the bar vertically, instead of horizontally */
+@media screen and (max-width: 400px) {
+  .sidebar a {
+    text-align: center;
+    float: none;
+  }
 }
